@@ -2,6 +2,7 @@
 
 1. Clear buffers before and after fgets().
 2. Test argv in validate().
+3. Verify that stdout is valid.
 
 1.11.0 (03/20/2014)
 
